--- a/some/index.html
+++ b/some/index.html
@@ -146,7 +146,7 @@
                 <button id="back-btn" class="text-slate-400 hover:text-slate-700 font-medium text-sm flex items-center gap-2 transition-colors">
                     <i class="fas fa-chevron-left"></i> 다시하기
                 </button>
-                <span class="text-[10px] font-bold text-rose-500 bg-rose-100 px-2 py-1 rounded">VER 3.4 SOME</span>
+                <span class="text-[10px] font-bold text-rose-500 bg-rose-100 px-2 py-1 rounded">VER 3.7 SOME</span>
             </div>
 
             <div id="result-content" class="space-y-6"></div>
@@ -192,7 +192,7 @@
     </div>
 
     <div class="fixed bottom-2 right-2 text-[10px] text-slate-300 font-mono pointer-events-none select-none z-50">
-        Ver 3.4 Some NoLock
+        Ver 3.7 Some Enhanced
     </div>
 
     <datalist id="mbti-list"></datalist>
@@ -203,24 +203,104 @@
             const dataList = document.getElementById('mbti-list');
             validMbtiList.forEach(t => { let opt = document.createElement('option'); opt.value = t; dataList.appendChild(opt); });
 
-            // 1. 연애/썸 데이터 (리스트형, 상세)
+            // 1. [데이터] 썸/플러팅 분석 (내용 대폭 강화)
             const mbtiData = {
-                "ISTJ": [{ type: "신중한 계획가형", like: "오차 없는 시간 약속 준수, 깔끔하고 단정한 외모와 옷차림, 예측 가능한 데이트 일정, 예의 바른 태도", dislike: "갑작스러운 번개 만남 강요, 시끄럽고 무질서한 장소, 허세 부리는 말투, 약속 시간 늦는 것", tip: "애매하게 '언제 밥 한번 먹자'는 말은 독입니다. '이번 주 토요일 6시에 강남역 3번 출구'처럼 구체적으로 제안하세요." }],
-                "ISFJ": [{ type: "섬세한 배려왕형", like: "지나가듯 했던 사소한 말 기억해주기, 식당 직원에게 친절한 모습, 안정적이고 차분한 데이트, 진심 담긴 편지", dislike: "강한 자기주장으로 몰아붙이는 것, 무례하고 거친 언행, 갈등 상황 조장, 연락 두절", tip: "급발진은 절대 금물입니다. 당신이 안전하고 따뜻한 사람이라는 확신이 들 때까지 천천히 스며들어야 합니다." }],
-                "INFJ": [{ type: "속 깊은 철학자형", like: "둘만의 깊은 대화(가치관, 인생), 조용한 곳에서의 데이트, 진정성 있는 눈빛, 도덕적인 신념", dislike: "가벼운 농담 따먹기만 하는 것, 거짓말이나 위선, 시끄러운 파티 문화, 선 넘는 장난", tip: "당신의 화려한 겉모습보다 내면에 관심을 가져주세요. '너는 어떻게 생각해?'라고 깊게 물어봐 주면 마음을 엽니다." }],
-                "INTJ": [{ type: "지적인 야망가형", like: "논리적이고 건설적인 대화, 배울 점이 있는 유능한 모습, 효율적인 데이트 코스, 내 목표를 지지해주는 것", dislike: "감정에만 호소하는 징징거림, 멍청하거나 무계획적인 행동, 시간 낭비하는 것, 뻔한 아부", tip: "밀당하지 마세요. 호감이 있다면 직설적이고 논리적으로 제안하는 것이 가장 효과적입니다. 뇌가 섹시한 사람을 좋아합니다." }],
-                "ISTP": [{ type: "시크한 고양이형", like: "혼자만의 시간 존중해주기, 쿨하고 독립적인 태도, 용건만 간단히 하는 깔끔함, 함께 즐기는 취미", dislike: "질척거리는 집착, 감정적인 드라마 찍기, 답장 재촉하기, 통제하려고 드는 것", tip: "고양이 다루듯 하세요. 다가오면 놀아주고, 멀어지면 놔두세요. 쫓아가면 도망갑니다." }],
-                "ISFP": [{ type: "감성적인 예술가형", like: "감각적인 인테리어의 장소, 세심하게 챙겨주는 매너, 구체적이고 예쁜 칭찬, 편안한 분위기", dislike: "결정을 강요하는 것, 목소리 크고 거친 사람, 비판적인 지적질, 갈등 상황", tip: "리드는 당신이 하되 강요는 마세요. '이거 어때?'라고 부드럽게 물어봐 주는 게 포인트입니다." }],
-                "INFP": [{ type: "낭만적인 몽상가형", like: "나의 감정에 깊이 공감해주는 것, 낭만적인 분위기, 예쁜 말과 손편지, 나의 취향 존중", dislike: "차가운 팩트 폭격, 내 말을 무시하는 태도, 속물적인 대화, 강압적인 분위기", tip: "현실적인 조언보다는 무조건적인 내 편이 되어주세요. 작은 선물이나 진심이 담긴 말 한마디에 크게 감동합니다." }],
-                "INTP": [{ type: "호기심 많은 괴짜형", like: "나의 마이너한 관심사를 흥미롭게 들어주는 것, 지적인 자극, 멍 때리는 시간 존중, 엉뚱한 유머", dislike: "뻔한 스몰토크(날씨, 밥), 논리 없는 감정적 주장, 사생활 꼬치꼬치 캐묻는 것", tip: "그 사람이 꽂혀있는 주제에 대해 질문하세요. 신나서 떠들기 시작하면 이미 반은 넘어온 겁니다." }],
-                "ESTP": [{ type: "화끈한 직진러형", like: "스릴 넘치는 액티비티, 돌려 말하지 않는 직설적인 호감 표현, 맛집 탐방, 센스 있는 유머", dislike: "답답하게 뜸 들이는 것, 빙빙 돌려 말하기, 지나치게 진지하고 무거운 분위기, 구속", tip: "고민할 시간에 일단 지르세요! '지금 나와, 드라이브 가자' 같은 박력 있는 제안이 먹힙니다." }],
-                "ESFP": [{ type: "주인공 본능 연예인형", like: "나에게 쏟아지는 관심과 칭찬, 서프라이즈 이벤트, 무한 리액션, 핫플레이스 데이트", dislike: "침묵과 정적, 나를 투명 인간 취급하는 것, 지루한 설교나 잔소리, 집에만 있는 것", tip: "텐션을 올리세요! '너랑 있으니까 진짜 재밌다', '오늘 옷 너무 예쁘다' 칭찬 폭격이 필요합니다." }],
-                "ENFP": [{ type: "사랑둥이 댕댕이형", like: "우쭈쭈 해주기, 나의 엉뚱한 말에도 맞장구쳐주는 태도, 끊임없는 애정 표현, 새로운 경험", dislike: "무관심, 차가운 반응, 엄격한 규칙이나 규율 강요", tip: "사소한 변화도 알아봐 주고 칭찬해주세요. 당신의 관심이 곧 사랑의 척도라고 생각합니다." }],
-                "ENTP": [{ type: "매력적인 논쟁가형", like: "말싸움(토론)을 즐겁게 받아주는 티키타카, 새로운 아이디어, 나를 인정하고 치켜세워 주는 것", dislike: "권위적으로 찍어 누르려는 태도, 무조건적인 복종 강요, 뻔하고 지루한 칭찬", tip: "논쟁을 피하지 말고 즐기세요. 지적으로 대등한 상대라고 느낄 때 강렬한 끌림을 느낍니다." }],
-                "ESTJ": [{ type: "확실한 리더형", like: "자신의 일에 몰입하는 능력 있는 모습, 확실한 호불호 표현, 체계적이고 효율적인 데이트, 시간 엄수", dislike: "우유부단하게 결정 못 하는 모습, 약속 어기는 것, 게으르고 무능력한 태도, 징징거림", tip: "감정보다는 이성에 호소하세요. 당신이 배울 점이 있고 미래를 함께 그릴 수 있는 사람임을 어필하세요." }],
-                "ESFJ": [{ type: "다정한 인싸형", like: "고맙다는 표현 자주 하기, 내 사람들을 챙겨주는 세심함, 빠른 답장과 활발한 리액션", dislike: "차가운 반응이나 읽씹, 내가 베푼 호의를 무시하는 것, 예의 없는 행동, 비판", tip: "그 사람이 베푸는 친절에 크게 감동하고 표현하세요. '너 같은 사람 처음이야'라는 말이 특효약입니다." }],
-                "ENFJ": [{ type: "열정적인 코치형", like: "나의 꿈과 비전을 진심으로 응원해주는 것, 긍정적인 대화, 먼저 다가와서 챙겨주는 따뜻함", dislike: "이기적인 행동, 고마워할 줄 모르는 태도, 비관적인 말, 사회적 약자에 대한 무례함", tip: "그 사람의 선한 영향력을 칭찬하세요. '너 덕분에 내가 더 좋은 사람이 된 것 같아'는 최고의 고백입니다." }],
-                "ENTJ": [{ type: "카리스마 대장형", like: "도전적이고 야망 있는 모습, 직설적이고 솔직한 화법, 일 잘하는 프로페셔널함, 자기계발", dislike: "감성팔이하며 의존하려는 모습, 무능력하고 게으른 태도, 시간 낭비하는 무의미한 대화", tip: "주눅 들지 말고 당당하게 대하세요. 자신의 일에 몰입하고 성취해내는 멋진 모습을 보여줄 때 반합니다." }]
+                "ISTJ": { 
+                    type: "신중한 계획가형", 
+                    like: "5분 일찍 도착하는 시간 약속 준수, 셔츠나 깔끔한 니트 같은 단정한 옷차림, 예측 가능한 데이트 일정(영화-밥-카페), 예의 바른 말투", 
+                    dislike: "당일 아침에 '그냥 딴 데 갈까?'라며 즉흥적으로 바꾸는 것, 시끄러운 클럽이나 헌팅포차, 허세 부리며 없는 말 지어내기, 10분 이상 지각", 
+                    tip: "애매하게 '언제 밥 한번 먹자'는 말은 이들에게 인사치레입니다. '이번 주 토요일 6시에 강남역 3번 출구 파스타집 어때요?'라고 구체적으로 제안해야 'YES'가 나옵니다." 
+                },
+                "ISFJ": { 
+                    type: "섬세한 배려왕", 
+                    like: "지나가듯 했던 '나 딸기 좋아해' 같은 말 기억해서 챙겨주기, 식당 직원에게 '감사합니다' 인사 잘하는 모습, 시끄럽지 않은 카페, 진심 담긴 카톡", 
+                    dislike: "자기주장만 내세우며 고집부리는 것, 욕설이나 비속어 사용, 일부러 질투 유발하려는 행동, 연락 텀이 너무 긴 것", 
+                    tip: "급발진은 절대 금물입니다. 당신이 안전하고 따뜻한 사람이라는 확신이 들 때까지 '천천히' 스며들어야 합니다. 부담 주지 말고 챙겨주세요." 
+                },
+                "INFJ": { 
+                    type: "신비로운 철학자", 
+                    like: "둘만의 깊은 대화(인생관, 가치관), 사람이 북적이지 않는 조용한 와인바, 진정성 있는 눈빛 교환, 도덕적이고 올바른 신념 보여주기", 
+                    dislike: "가벼운 농담 따먹기만 계속하는 것, 거짓말이나 위선적인 태도, 시끄러운 파티 문화, 선 넘는 장난이나 스킨십", 
+                    tip: "당신의 화려한 겉모습보다 내면에 관심을 가져주세요. '너는 그 일에 대해 어떻게 생각해?'라고 깊게 물어봐 주면 당신을 특별하게 생각할 것입니다." 
+                },
+                "INTJ": { 
+                    type: "지적인 야망가", 
+                    like: "논리적이고 건설적인 대화, 배울 점이 있는 유능하고 스마트한 모습, 효율적인 데이트 코스, 내 꿈과 목표를 지지해주는 멘트", 
+                    dislike: "감정에만 호소하는 이유 없는 징징거림, 멍청하거나 무계획적인 행동, 시간 낭비하는 무의미한 만남, 뻔한 아부나 빈말", 
+                    tip: "밀당하지 마세요. 시간 낭비라고 생각합니다. 호감이 있다면 직설적이고 논리적으로 '너랑 더 알아가고 싶어, 왜냐하면~'라고 말하는 게 가장 효과적입니다." 
+                },
+                "ISTP": { 
+                    type: "시크한 고양이", 
+                    like: "혼자만의 시간과 공간 존중해주기, 쿨하고 독립적인 태도, 용건만 간단히 하는 깔끔함, 함께 즐기는 액티비티나 취미 공유", 
+                    dislike: "질척거리는 집착('지금 뭐해? 누구랑 있어?'), 감정적인 드라마 찍기, 답장 재촉하기, 오글거리는 멘트", 
+                    tip: "고양이 다루듯 하세요. 다가오면 놀아주고, 멀어지면 놔두세요. 쫓아가면 도망갑니다. 쿨하게 대할수록 당신에게 매력을 느낍니다." 
+                },
+                "ISFP": { 
+                    type: "감성적인 예술가", 
+                    like: "감각적인 인테리어의 카페나 전시회, 세심하게 챙겨주는 매너, 구체적이고 예쁜 칭찬('오늘 옷 색감 진짜 잘 어울린다'), 편안한 침묵", 
+                    dislike: "결정을 강요하고 재촉하는 것('빨리 골라'), 목소리 크고 거친 사람, 비판적인 지적질, 싸움이나 갈등 상황", 
+                    tip: "리드는 당신이 하되 강요는 마세요. '이거 할래?' 보다는 '이거 어때?'라고 부드럽게 물어봐 주는 게 포인트입니다. 그들의 취향을 존중해주세요." 
+                },
+                "INFP": { 
+                    type: "낭만적인 몽상가", 
+                    like: "나의 감정에 깊이 공감해주고 경청하기, 낭만적인 분위기, 예쁜 말과 손편지 선물, 나의 독특한 취향이나 마이너한 감성 존중", 
+                    dislike: "차가운 팩트 폭격으로 상처 주기, 내 말을 무시하거나 끊는 태도, 속물적인 대화(돈, 현실), 강압적인 분위기", 
+                    tip: "현실적인 조언보다는 무조건적인 '내 편'이 되어주세요. 작은 선물이나 진심이 담긴 따뜻한 말 한마디에 크게 감동하여 사랑에 빠집니다." 
+                },
+                "INTP": { 
+                    type: "호기심 많은 괴짜", 
+                    like: "나의 마이너한 관심사(우주, 미스터리 등)를 흥미롭게 들어주는 것, 지적인 자극, 멍 때리는 시간 존중, 엉뚱한 유머 코드", 
+                    dislike: "뻔한 스몰토크(날씨, 밥 먹었니), 논리 없는 감정적 주장 강요, 사생활 꼬치꼬치 캐묻는 것, 멍청하고 답답한 행동", 
+                    tip: "그 사람이 꽂혀있는 주제에 대해 질문하세요. 신나서 떠들기 시작하면 이미 반은 넘어온 겁니다. 지적으로 통하는 게 중요합니다." 
+                },
+                "ESTP": { 
+                    type: "화끈한 직진러", 
+                    like: "스릴 넘치는 액티비티(번지점프, 드라이브), 돌려 말하지 않는 직설적인 호감 표현, 맛집 탐방, 센스 있는 유머 감각", 
+                    dislike: "답답하게 뜸 들이거나 빙빙 돌려 말하기, 지나치게 진지하고 무거운 분위기, 구속하거나 통제하려는 시도, 지루함", 
+                    tip: "고민할 시간에 일단 지르세요! '지금 나와, 드라이브 가자' 같은 박력 있는 제안이 먹힙니다. 함께 있을 때 무조건 즐거워야 합니다." 
+                },
+                "ESFP": { 
+                    type: "주목받는 연예인", 
+                    like: "나에게 쏟아지는 관심과 칭찬 폭격, 서프라이즈 이벤트, 나의 말에 대한 무한 리액션, 핫플레이스 데이트", 
+                    dislike: "침묵과 정적, 나를 투명 인간 취급하는 것, 지루한 설교나 잔소리, 집에만 박혀있는 것, 우울한 얘기", 
+                    tip: "텐션을 올리세요! '너랑 있으니까 진짜 재밌다', '오늘 옷 너무 예쁘다' 칭찬 폭격이 필요합니다. 리액션이 곧 사랑입니다." 
+                },
+                "ENFP": { 
+                    type: "사랑둥이 댕댕이", 
+                    like: "우쭈쭈 해주며 귀여워하기, 나의 엉뚱한 말에도 맞장구쳐주는 태도, 끊임없는 애정 표현, 새로운 경험 함께하기", 
+                    dislike: "무관심이나 차가운 반응, 엄격한 규칙이나 규율 강요, 반복되는 지루한 일상, 혼자 두는 것", 
+                    tip: "사소한 변화도 알아봐 주고 칭찬해주세요. 당신의 관심이 곧 사랑의 척도라고 생각합니다. 함께 새로운 곳을 모험하세요." 
+                },
+                "ENTP": { 
+                    type: "매력적인 논쟁가", 
+                    like: "말싸움(토론)을 즐겁게 받아주는 티키타카, 새로운 아이디어 제안, 나를 인정하고 치켜세워 주는 것, 쿨한 태도", 
+                    dislike: "권위적으로 찍어 누르려는 태도, '원래 그래'라며 무조건적인 복종 강요, 뻔하고 지루한 칭찬, 통제", 
+                    tip: "논쟁을 피하지 말고 즐기세요. 지적으로 대등한 상대라고 느낄 때 강렬한 끌림을 느낍니다. 지루할 틈을 주지 마세요." 
+                },
+                "ESTJ": { 
+                    type: "확실한 리더형", 
+                    like: "자신의 일에 몰입하는 능력 있는 모습, 확실한 호불호 표현, 체계적이고 효율적인 데이트 계획, 시간 약속 엄수", 
+                    dislike: "우유부단하게 결정 못 하는 모습, 약속 어기는 것, 게으르고 무능력한 태도, 감정에 치우쳐 징징거림", 
+                    tip: "감정보다는 이성에 호소하세요. 당신이 배울 점이 있고 미래를 함께 그릴 수 있는 듬직한 사람임을 어필하세요." 
+                },
+                "ESFJ": { 
+                    type: "다정한 인싸", 
+                    like: "고맙다는 표현 자주 하기, 내 가족과 친구들을 챙겨주는 세심함, 빠른 답장과 활발한 리액션, 공감해주기", 
+                    dislike: "차가운 반응이나 읽씹/안읽씹, 내가 베푼 호의를 무시하는 것, 예의 없는 행동, 비판적인 태도", 
+                    tip: "그 사람이 베푸는 친절에 크게 감동하고 표현하세요. '너 같은 사람 처음이야'라는 말이 특효약입니다. 관계를 소중히 하세요." 
+                },
+                "ENFJ": { 
+                    type: "열정적인 코치", 
+                    like: "나의 꿈과 비전을 진심으로 응원해주는 것, 긍정적인 대화, 먼저 다가와서 챙겨주는 따뜻함, 경청하는 자세", 
+                    dislike: "이기적인 행동, 고마워할 줄 모르는 태도, 비관적인 말과 불평불만, 사회적 약자에 대한 무례함", 
+                    tip: "그 사람의 선한 영향력을 칭찬하세요. '너 덕분에 내가 더 좋은 사람이 된 것 같아'는 최고의 고백입니다." 
+                },
+                "ENTJ": { 
+                    type: "카리스마 대장", 
+                    like: "도전적이고 야망 있는 모습, 직설적이고 솔직한 화법, 일 잘하는 프로페셔널함, 끊임없는 자기계발", 
+                    dislike: "감성팔이하며 의존하려는 모습, 무능력하고 게으른 태도, 시간 낭비하는 무의미한 대화, 우유부단함", 
+                    tip: "주눅 들지 말고 당당하게 대하세요. 자신의 일에 몰입하고 성취해내는 멋진 모습을 보여줄 때 반합니다. 능력 있는 파트너를 원합니다." 
+                }
             };
 
             // 2. 궁합 점수 (썸)
@@ -242,22 +322,34 @@
                 else { title = "🌪 공략 난이도 최상"; desc = "취향이 완전히 다릅니다. 하지만 원래 나쁜 남자/여자에게 끌리는 법이죠."; }
 
                 if (!sameTF) {
-                    if (me.includes('T')) conflict = "⚠️ <b>[접근 주의]</b> 논리적인 해결책 제시는 잠시 넣어두세요. 상대방(F)은 <b>공감과 리액션</b>을 원합니다.";
-                    else conflict = "⚠️ <b>[접근 주의]</b> 감정적인 호소는 부담스러울 수 있어요. 상대방(T)에게는 <b>깔끔하고 명확하게</b> 용건을 말하는 게 좋습니다.";
+                    if (me.includes('T')) conflict = "⚠️ <b>[접근 주의]</b> 논리적인 해결책 제시는 잠시 넣어두세요. 상대방(F)은 <b>공감과 리액션</b>을 원합니다. '그랬구나' 연습하세요.";
+                    else conflict = "⚠️ <b>[접근 주의]</b> 감정적인 호소는 부담스러울 수 있어요. 상대방(T)에게는 <b>깔끔하고 명확하게</b> 용건을 말하는 게 좋습니다. 징징대지 마세요.";
                 } else {
                     conflict = "✨ <b>[어필 포인트]</b> 대화 코드가 잘 맞아서 금방 친해질 수 있어요! 공통 관심사만 찾으면 게임 끝입니다.";
                 }
                 return { score, title, desc, conflict };
             }
 
-            // 3. 시크릿 가이드 (썸/플러팅)
+            // 3. 시크릿 가이드 (썸/플러팅 - 데이터 보강)
             const secretData = {
-                "S": { appeal: "👀 <b>시각적 자극:</b> 오늘 입은 옷, 바뀐 헤어스타일을 구체적으로 칭찬하세요. 깔끔한 외모는 필수!", beware: "☁️ <b>뜬구름 잡기:</b> 비현실적인 망상보다는 '지금 맛있는 거', '오늘 날씨' 이야기를 하세요." },
-                "N": { appeal: "✨ <b>상상력 자극:</b> '만약에 우리가...' 같은 질문을 던지세요. 독특한 취향을 어필하면 흥미를 느낍니다.", beware: "🤖 <b>현실주의:</b> 상대의 꿈을 '돈이 안 되잖아'라고 평가하는 순간 끝입니다." },
-                "T": { appeal: "🧠 <b>지적인 매력:</b> 멍청한 모습은 절대 금물. 자기 일 잘하고 똑부러지는 모습을 보여주세요.", beware: "😭 <b>감정 과잉:</b> 아직 사귀지도 않는데 징징거리거나 서운해하면 도망갑니다." },
-                "F": { appeal: "🥰 <b>다정한 공감:</b> 눈을 맞추고 웃어주세요. 사소한 배려와 매너에 심장이 반응합니다.", beware: "❄️ <b>차가운 말투:</b> 장난이라도 팩폭을 날리면 상처받고 마음을 닫습니다." },
-                "J": { role: "📅 계획적 접근", good: "약속 시간 엄수", bad: "당일 약속 취소" },
-                "P": { role: "🎉 유연한 접근", good: "즉흥적인 제안", bad: "통제하려 들기" }
+                "S": { 
+                    appeal: "👀 <b>시각적 자극 & 구체적 칭찬:</b><br>'오늘 예쁘다'보다 '오늘 입은 셔츠 색깔 진짜 잘 어울린다'가 먹힙니다. 깔끔한 외모와 좋은 향기는 기본입니다.", 
+                    beware: "☁️ <b>뜬구름 잡는 소리:</b><br>'만약에 좀비가 나타나면...' 같은 비현실적인 망상은 자제하세요. '지금 맛있는 거', '오늘 날씨' 같은 현실적인 주제로 대화하세요." 
+                },
+                "N": { 
+                    appeal: "✨ <b>상상력 자극 & 깊은 대화:</b><br>'너는 인생에서 뭐가 제일 중요해?' 같은 심오한 질문을 던지세요. 당신만의 독특한 취향(영화, 음악)을 어필하면 흥미를 느낍니다.", 
+                    beware: "🤖 <b>너무 현실적인 태도:</b><br>상대방의 꿈이나 상상을 '그건 돈이 안 되잖아', '현실적으로 불가능해'라고 짓밟지 마세요. 꼰대로 찍힙니다." 
+                },
+                "T": { 
+                    appeal: "🧠 <b>지적인 매력 & 능력 어필:</b><br>자기 일 잘하고 똑부러지는 모습을 보여주세요. 고민 상담할 때 감정에 호소하기보다 '그래서 이렇게 해결하려고 해'라고 주관을 보여주세요.", 
+                    beware: "😭 <b>감정 과잉 & 징징거림:</b><br>아직 사귀지도 않는데 징징거리거나 서운해하면 '피곤한 스타일'이라며 도망갑니다. 쿨하게 대하세요." 
+                },
+                "F": { 
+                    appeal: "🥰 <b>다정한 공감 & 리액션:</b><br>눈을 맞추고 고개를 끄덕여주세요. '정말? 힘들었겠다'라는 말 한마디가 그 사람의 마음을 엽니다. 사소한 배려와 매너에 심장이 반응합니다.", 
+                    beware: "❄️ <b>차가운 말투 & 팩트 폭격:</b><br>장난이라도 팩폭을 날리면 상처받고 마음을 닫습니다. 비판할 때는 반드시 쿠션어('너를 위해서 하는 말인데~')를 사용하세요." 
+                },
+                "J": { role: "📅 계획적인 접근", good: "약속 시간 엄수 & 데이트 코스 준비", bad: "당일 약속 취소 & '아무거나' 시전" },
+                "P": { role: "🎉 유연한 접근", good: "즉흥적인 제안 & 돌발 상황 즐기기", bad: "하나부터 열까지 통제하려 들기" }
             };
 
             const formatList = (str) => {
@@ -282,8 +374,8 @@
                 const tfKey = you.includes('T') ? 'T' : 'F';
                 const jpKey = you.includes('J') ? 'J' : 'P';
                 
-                const secretAppeal = secretData[snKey].appeal + "<br>" + secretData[tfKey].appeal;
-                const secretBeware = secretData[snKey].beware + "<br>" + secretData[tfKey].beware;
+                const secretAppeal = secretData[snKey].appeal + "<br><br>" + secretData[tfKey].appeal;
+                const secretBeware = secretData[snKey].beware + "<br><br>" + secretData[tfKey].beware;
                 const secretRole = secretData[jpKey];
 
                 const resultHTML = `
@@ -302,7 +394,7 @@
                             </div>
                         </div>
                         <div class="mt-5 text-xs text-slate-400 word-keep break-keep leading-relaxed bg-white border border-slate-100 p-3 rounded-lg">
-                            <span class="font-bold">💡 Tip:</span> ${tData.tip}
+                            <span class="font-bold">💡 꼬시기 Tip:</span> ${tData.tip}
                         </div>
                     </div>
 
@@ -329,11 +421,11 @@
                             <div class="space-y-6">
                                 <div class="bg-rose-50 p-5 rounded-2xl border border-rose-100 shadow-sm">
                                     <h5 class="font-bold text-rose-600 text-sm mb-3 flex items-center"><i class="fas fa-heart mr-2"></i>심쿵 포인트 (Appeal)</h5>
-                                    <ul class="custom-list text-slate-700 text-sm leading-relaxed space-y-2">${formatList(secretAppeal)}</ul>
+                                    <div class="text-slate-700 text-sm leading-relaxed">${secretAppeal}</div>
                                 </div>
                                 <div class="bg-slate-50 p-5 rounded-2xl border border-slate-200 shadow-sm">
                                     <h5 class="font-bold text-slate-600 text-sm mb-3 flex items-center"><i class="fas fa-ban mr-2"></i>절대 금지 (Beware)</h5>
-                                    <ul class="style-list text-slate-700 text-sm leading-relaxed space-y-2">${formatList(secretBeware)}</ul>
+                                    <div class="text-slate-700 text-sm leading-relaxed">${secretBeware}</div>
                                 </div>
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                                     <div class="bg-indigo-50 p-5 rounded-2xl border border-indigo-100 text-center flex flex-col justify-center">
