--- a/2026bible/index.html
+++ b/2026bible/index.html
@@ -335,7 +335,7 @@
                 "female": {
                     "like": [
                         { text: "보라 지금은 은혜 받을 만한 때요 보라 지금은 구원의 날이로다", reference: "고린도후서 6:2", explanation: "현재(Now)를 즐기는 당신에게 '지금 바로'라는 말은 짜릿합니다." },
-                        { text: "행함이 없는 믿음은 그 자체가 죽은 것이라", reference: "야고보서 2:17", explanation: "말보다 행동으로 보여주는 걸크러쉬 당신에게 딱입니다." }
+                        { text: "행함이 없는 믿음은 그 자체가 죽은 것이라", reference: "야고보서 2:17", explanation: "말보다 행동으로 보여주는 걸 좋아하는 걸크러쉬 당신에게 딱입니다." }
                     ],
                     "dislike": [
                         { text: "내일 일을 위하여 염려하지 말라", reference: "마태복음 6:34", explanation: "대책 없이 살라는 말처럼 들려 현실적인 당신에겐 무책임해 보입니다." },
