--- a/2026bible/index.html
+++ b/2026bible/index.html
@@ -61,22 +61,6 @@
             <div class="clean-card p-8 md:p-10 shadow-lg bg-white">
                 <div class="flex flex-col gap-6">
                     <div>
-                        <label class="block text-xs font-bold text-slate-400 mb-2 ml-1">직업</label>
-                        <select id="job" class="w-full bg-indigo-50/50 border border-indigo-200 rounded-xl p-4 text-center text-base font-bold text-slate-800 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition cursor-pointer">
-                            <option value="">선택하세요</option>
-                            <option value="student">학생</option>
-                            <option value="worker">직장인</option>
-                            <option value="business">사업가/자영업</option>
-                            <option value="teacher">교사/강사</option>
-                            <option value="medical">의료진</option>
-                            <option value="pastor">목회자/전도사</option>
-                            <option value="housewife">주부</option>
-                            <option value="retired">은퇴</option>
-                            <option value="other">기타</option>
-                        </select>
-                    </div>
-
-                    <div>
                         <label class="block text-xs font-bold text-slate-400 mb-2 ml-1">성별</label>
                         <div class="flex gap-3">
                             <button id="gender-male" onclick="selectGender('male')" class="flex-1 bg-slate-100 border-2 border-slate-200 rounded-xl p-4 text-center font-bold text-slate-600 transition-all hover:bg-indigo-50 hover:border-indigo-300">
@@ -500,11 +484,10 @@
         };
 
         function findVerses() {
-            const job = document.getElementById('job').value;
             const mbti = document.getElementById('mbti').value.toUpperCase().trim();
 
-            if (!job || !selectedGender || !mbti) {
-                alert("모든 항목을 선택해주세요!");
+            if (!selectedGender || !mbti) {
+                alert("성별과 MBTI를 모두 선택해주세요!");
                 return;
             }
 
@@ -522,14 +505,10 @@
             // 성별에 따른 데이터 선택
             const genderData = mbtiSpecificData[selectedGender];
 
-            showResult(mbti, job, selectedGender, genderData.like, genderData.dislike);
+            showResult(mbti, selectedGender, genderData.like, genderData.dislike);
         }
 
-        function showResult(mbti, job, gender, likeVerses, dislikeVerses) {
-            const jobText = {
-                "student": "학생", "worker": "직장인", "business": "사업가/자영업", "teacher": "교사/강사", "medical": "의료진",
-                "pastor": "목회자/전도사", "housewife": "주부", "retired": "은퇴", "other": "기타"
-            };
+        function showResult(mbti, gender, likeVerses, dislikeVerses) {
             const genderText = { "male": "남성", "female": "여성" };
 
             let likeHTML = likeVerses.map((verse, index) => `
@@ -562,7 +541,7 @@
                 <div class="clean-card p-6 md:p-8 bg-white mb-6 text-center">
                     <span class="inline-block bg-indigo-50 text-indigo-600 text-xs font-bold px-3 py-1 rounded-full mb-3">ANALYSIS RESULT</span>
                     <h2 class="text-2xl font-extrabold text-slate-800 mb-2">
-                        <span class="text-point">${mbti}</span> ${genderText[gender]} · ${jobText[job]}
+                        <span class="text-point">${mbti}</span> ${genderText[gender]}
                     </h2>
                     <p class="text-slate-500 text-sm word-keep">나에게 맞는 말씀 처방전</p>
                 </div>
@@ -591,7 +570,6 @@
         function resetPage() {
             document.getElementById('input-page').classList.remove('hidden');
             document.getElementById('result-page').classList.add('hidden');
-            document.getElementById('job').value = '';
             document.getElementById('mbti').value = '';
             selectedGender = '';
             document.getElementById('gender-male').className = 'flex-1 bg-slate-100 border-2 border-slate-200 rounded-xl p-4 text-center font-bold text-slate-600 transition-all hover:bg-indigo-50 hover:border-indigo-300';
