Add: 2026bible - 결과 확인하기 버튼에 안내 문구 추가

--- a/2026bible/index.html
+++ b/2026bible/index.html
@@ -78,9 +78,12 @@
                         <datalist id="mbti-list"></datalist>
                     </div>
                     
-                    <button id="find-btn" onclick="findVerses()" class="w-full bg-point hover:opacity-90 text-white font-bold py-5 rounded-xl shadow-lg text-lg transition-all transform active:scale-[0.98] flex items-center justify-center gap-2 mt-4">
-                        <span>결과 확인하기</span> <i class="fas fa-search"></i>
-                    </button>
+                    <div>
+                        <button id="find-btn" onclick="findVerses()" class="w-full bg-point hover:opacity-90 text-white font-bold py-5 rounded-xl shadow-lg text-lg transition-all transform active:scale-[0.98] flex items-center justify-center gap-2 mt-4">
+                            <span>결과 확인하기</span> <i class="fas fa-search"></i>
+                        </button>
+                        <p class="text-center text-xs text-white/70 mt-2">(그냥 재미로 보세요~ 사탄 아니에요~)</p>
+                    </div>
                 </div>
             </div>
         </div>
