Add: 모든 페이지에 footer 추가 (© 2025 재밌는웹페이지연구소)

--- a/index.html
+++ b/index.html
@@ -546,5 +546,11 @@
             }
         }
     </script>
+    
+    <footer class="mt-12 pt-8 pb-6 border-t border-rose-200/30 text-center">
+        <p class="text-xs text-slate-400">
+            © 2025 재밌는웹페이지연구소. All rights reserved.
+        </p>
+    </footer>
 </body>
 </html>
