--- a/some/index.html
+++ b/some/index.html
@@ -150,6 +150,12 @@
         </div>
     </div>
 
+    <footer class="mt-12 pt-8 pb-6 border-t border-rose-200/30 text-center">
+        <p class="text-xs text-slate-400">
+            © 2025 재밌는웹페이지연구소. All rights reserved.
+        </p>
+    </footer>
+
     <div class="fixed bottom-2 right-2 text-[10px] text-slate-300 font-mono pointer-events-none select-none z-50">Ver 4.0 Messenger+</div>
     <datalist id="mbti-list"></datalist>
 
