Add: 모든 서비스에 결과 확인 전 쿠팡 링크 열기 기능 추가

--- a/2026bible/index.html
+++ b/2026bible/index.html
@@ -499,6 +499,8 @@
                 return;
             }
 
+            window.open('https://link.coupang.com/a/ddddJ5', '_blank');
+
             const mbtiSpecificData = bibleData[mbti];
             if (!mbtiSpecificData) {
                 alert("데이터 로딩 중 오류가 발생했습니다.");
