--- a/2026bible/index.html
+++ b/2026bible/index.html
@@ -80,7 +80,7 @@
                     
                     <div>
                         <div class="flex flex-col gap-3 mt-4">
-                            <button onclick="findVerses(false)" class="w-full bg-indigo-600 hover:bg-indigo-500 text-white font-bold py-4 rounded-xl shadow-lg text-base transition-all transform active:scale-[0.98] flex items-center justify-center gap-2">
+                            <button onclick="findVerses(false)" class="w-full bg-white hover:bg-slate-50 text-slate-800 border-2 border-slate-200 font-bold py-4 rounded-xl shadow-lg text-base transition-all transform active:scale-[0.98] flex items-center justify-center gap-2">
                                 <span>내용 확인</span> <i class="fas fa-search"></i>
                             </button>
                             <button onclick="findVerses(true)" class="w-full bg-point hover:opacity-90 text-white font-bold py-4 rounded-xl shadow-lg text-base transition-all transform active:scale-[0.98] flex items-center justify-center gap-2">
