--- a/biz/index.html
+++ b/biz/index.html
@@ -77,7 +77,7 @@
                     </div>
                     
                     <div class="flex flex-col gap-3 mt-4">
-                        <button onclick="showResultDirect()" class="w-full bg-slate-700 hover:bg-slate-600 text-white font-bold py-4 rounded-xl shadow-lg text-base transition-all transform active:scale-[0.98] flex items-center justify-center gap-2">
+                        <button onclick="showResultDirect()" class="w-full bg-white hover:bg-slate-50 text-slate-800 border-2 border-slate-200 font-bold py-4 rounded-xl shadow-lg text-base transition-all transform active:scale-[0.98] flex items-center justify-center gap-2">
                             <span>내용 확인</span> <i class="fas fa-search"></i>
                         </button>
                         <button onclick="showResultWithCoupang()" class="w-full bg-slate-900 hover:bg-slate-800 text-white font-bold py-4 rounded-xl shadow-lg text-base transition-all transform active:scale-[0.98] flex items-center justify-center gap-2">
